[gd_scene load_steps=25 format=2]

[ext_resource path="res://maihar.gd" type="Script" id=1]
[ext_resource path="res://fonts/xolonium-regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://ART/Chacter/brother.png" type="Texture" id=3]
[ext_resource path="res://ART/Rewa/girl2.png" type="Texture" id=4]
[ext_resource path="res://music/60_TablaFull_10_239_SP.wav" type="AudioStream" id=5]
[ext_resource path="res://ART/back_img2.png" type="Texture" id=6]
[ext_resource path="res://music/Dholak_06_697.wav" type="AudioStream" id=7]
[ext_resource path="res://ART/dialog_Box.png" type="Texture" id=8]
[ext_resource path="res://ART/next_icon_2.png" type="Texture" id=9]
[ext_resource path="res://ART/back_img.png" type="Texture" id=10]
[ext_resource path="res://ART/Chacter/girl3-removebg-preview.png" type="Texture" id=11]
[ext_resource path="res://ART/next_img.png" type="Texture" id=12]
[ext_resource path="res://ART/Chacter/Man.png" type="Texture" id=13]
[ext_resource path="res://ART/Maihar/maihar_entrance.jpg" type="Texture" id=14]
[ext_resource path="res://ART/Maihar/maihar_station.jpg" type="Texture" id=15]
[ext_resource path="res://ART/Maihar/maihar_temple1.jpeg" type="Texture" id=16]
[ext_resource path="res://ART/Maihar/maihar_mata.jpg" type="Texture" id=17]
[ext_resource path="res://ART/Maihar/maihar_stairs.jpg" type="Texture" id=18]
[ext_resource path="res://ART/Maihar/maihar_roapway1.jpg" type="Texture" id=19]

[sub_resource type="DynamicFont" id=1]
size = 20
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 18
outline_size = 1
outline_color = Color( 0.0627451, 0.00784314, 0.00784314, 1 )
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=3]
resource_name = "IDLE"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -50 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="DynamicFont" id=5]
size = 14
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="Maihar" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="maihar" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="MaiharStation" type="Sprite" parent="maihar"]
visible = false
position = Vector2( 510.5, 300 )
scale = Vector2( 0.799219, 0.836111 )
texture = ExtResource( 15 )

[node name="MaiharEntrance" type="Sprite" parent="maihar"]
visible = false
position = Vector2( 512, 289 )
scale = Vector2( 1.9375, 1.40889 )
texture = ExtResource( 14 )

[node name="MaiharStairs" type="Sprite" parent="maihar"]
visible = false
position = Vector2( 532, 342.5 )
scale = Vector2( 0.82, 0.928378 )
texture = ExtResource( 18 )

[node name="MaiharRoapway1" type="Sprite" parent="maihar"]
visible = false
position = Vector2( 537.75, 143 )
scale = Vector2( 0.768929, 0.667619 )
texture = ExtResource( 19 )

[node name="MaiharTemple1" type="Sprite" parent="maihar"]
visible = false
position = Vector2( 511.5, 300 )
scale = Vector2( 1.71167, 1.78698 )
texture = ExtResource( 16 )

[node name="MaiharMata" type="Sprite" parent="maihar"]
visible = false
position = Vector2( 492, 308 )
scale = Vector2( 0.622739, 0.593992 )
texture = ExtResource( 17 )

[node name="Girl3" type="Sprite" parent="maihar"]
visible = false
position = Vector2( 141, 377 )
scale = Vector2( 1.41073, 1.39119 )
texture = ExtResource( 11 )

[node name="Girl2" type="Sprite" parent="maihar"]
visible = false
position = Vector2( 865, 349 )
scale = Vector2( 1.20801, 1.19039 )
texture = ExtResource( 4 )

[node name="Man" type="Sprite" parent="maihar"]
visible = false
position = Vector2( 845, 298 )
scale = Vector2( 0.418524, 0.418524 )
texture = ExtResource( 13 )

[node name="ModiJi" type="Sprite" parent="maihar"]
visible = false
position = Vector2( 143, 366 )
scale = Vector2( 0.314516, 0.314516 )
texture = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="maihar"]
self_modulate = Color( 0.92549, 0.921569, 0.921569, 1 )
anchor_right = 25.601
anchor_bottom = 14.986
margin_left = 64.0
margin_top = 423.0
margin_right = -64.04
margin_bottom = -29.44
texture = ExtResource( 8 )
expand = true

[node name="Name" type="RichTextLabel" parent="maihar"]
anchor_left = 12.062
anchor_top = 15.061
anchor_right = 12.062
anchor_bottom = 15.061
margin_left = -430.48
margin_top = -207.44
margin_right = 404.52
margin_bottom = -179.44
custom_fonts/normal_font = SubResource( 1 )
text = "Name"

[node name="Body" type="RichTextLabel" parent="maihar"]
anchor_left = 12.487
anchor_top = 15.132
anchor_right = 12.487
anchor_bottom = 15.132
margin_left = -417.48
margin_top = -166.28
margin_right = 417.52
margin_bottom = -44.28
custom_fonts/normal_font = SubResource( 2 )
text = "uiehrpizsuhgo;xjfknh;izseruhjtopzdrijgh;ozsijg;oxdfjghpzwseiothjupeositihjzpseiofgjnzsi;dgjnzwspe9othjdfio;guhs;eotihjzws;eojfhsz;diofghpsoieurfhpozsdjfn;ziosjhftg;zosduhfpozwsthjzsoejfhzs;ioguhzpwsoethjzwseothjoghjzs;doghjizwsopethzpsofhjszd;ofgihjswze;otihjsz;eofihjzspotijzswpeoitjsdogihjszeoitjswzeo0[tijszd[fgoijszdfokiswzhjert[zsifhpszodfhjkjsehfo;zsehrfpiozsdfj;owzeirtjzswefrijhszepotijszdf;oiszhjdf[oszeijrj"

[node name="NextIcon" type="Sprite" parent="maihar"]
position = Vector2( 941, 539 )
scale = Vector2( 0.15894, 0.246154 )
texture = ExtResource( 9 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="maihar/NextIcon"]
anims/IDLE = SubResource( 3 )
anims/RESET = SubResource( 4 )

[node name="Tween" type="Tween" parent="maihar"]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="maihar"]
stream = ExtResource( 5 )

[node name="click_enter" type="AudioStreamPlayer" parent="maihar"]
stream = ExtResource( 7 )
bus = "Sound FX"

[node name="Back" type="Button" parent="maihar"]
margin_left = -6.0
margin_top = 550.0
margin_right = 76.0
margin_bottom = 601.0
text = "Back"
icon = ExtResource( 6 )
flat = true
icon_align = 1
expand_icon = true

[node name="Next" type="Button" parent="maihar"]
margin_left = 947.0
margin_top = 557.0
margin_right = 1029.0
margin_bottom = 608.0
text = "Next"
icon = ExtResource( 12 )
flat = true
icon_align = 1
expand_icon = true

[node name="Button" type="Button" parent="maihar"]
margin_left = 13.0
margin_top = 19.0
margin_right = 110.0
margin_bottom = 77.0
custom_fonts/font = SubResource( 5 )
text = "Main menu"
icon = ExtResource( 10 )
flat = true
clip_text = true
icon_align = 1
expand_icon = true

[connection signal="tween_completed" from="maihar/Tween" to="maihar" method="_on_Tween_tween_completed"]
[connection signal="pressed" from="maihar/Back" to="maihar" method="_on_Back_pressed"]
[connection signal="pressed" from="maihar/Next" to="maihar" method="_on_Next_pressed"]
[connection signal="pressed" from="maihar/Button" to="maihar" method="_on_Button_pressed"]
